chamber/styles/base.css
:root {
    --primary-color: #065DAA;
    --secondary-color: #AAC1E1;
    --teriary-color: lightgray;
    --highlight-color: #9BC1B4;
    --link-color: black;
    --font-color: black;


}
[data-theme="dark"] {
    --primary-color: rgb(3, 0, 85);
    --secondary-color: #363658;
    --teriary-color: rgb(47, 47, 47);
    --highlight-color: #055f5f;
    --font-color: #b6b6b6;
    --link-color: white;
    --bg-color: #000000;
}


body {
    background-color: var(--teriary-color);
    color: var(--font-color);
}

header {
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}

header img {
    max-width: 70px;
    max-height: 70px;
    margin-left: 2%;

}

#current-page{
    background-color: var(--highlight-color);
}
.title {
    justify-self: center;
}

main {
    width: clamp(200px, 95%, 2160px);
    margin: auto;
    display: grid;
    background-color: var(--secondary-color);
    grid-template-columns: 1fr 1fr 1fr;
}

.discover {
    grid-column: 1/4;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.image-gallery img {
    width: 200px;
    max-width: 100%;
    height: auto;
}

section {
    /* border: black solid 1px; */
    background-color: var(--teriary-color);
    margin: 1em;
    border: solid var(--primary-color);
    border-radius: 20px;
    
}
#banner{
    text-align: center;
    background-color: var(--highlight-color);
    grid-column: 1/-1;
    justify-content: space-between;
}

#banner button {
    background-color: var(--highlight-color);
}
#banner p{
    margin: 0;
    padding: 1%;
}

.hero {
    grid-column: 1/4;
    margin-top: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#hero-img img {
    width: clamp(300px, 2160px, 100%);
    position: relative;
    margin: auto;

}

.call-to-action:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-bottom: 5px;

}

#temp::after {
    content: ' °F';
}

footer {
    display: flex;
    align-content: center;
    justify-content: space-around;
    background-color: var(--primary-color);
    border-top: black solid 5px;

}
a{
    color: var(--link-color);
}

.active {
    display: none;
}

.call-to-action {
    text-align: center;
    background-color: var(--highlight-color);
    border: solid var(--primary-color);
    border-radius: 10px;
    transition-duration: 0.4s;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 6em;
    height: 1em;
    position: absolute;
    color: var(--font-color);
    text-decoration: none;

}
.sign-up{
    width: fit-content;
}
form input {
    background-color: var(--teriary-color);
    display: block;
    color: var(--font-color);
}

form label {
    display: block;
    margin: 1%;
}

select {
    background-color: var(--highlight-color);
}

textarea {
    background-color: var(--teriary-color);
    width: 90%;
}

.membership{
    padding: 5%;
    border: var(--highlight-color) solid;
    transition: 0.4s;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.membership h2 {
    text-align: center;
}


.membership dt {
    font-size: 1.2rem;
}
.theme-switch-wrapper{
    padding: 5px;
}
.theme-switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    
  }
  

  .theme-switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #2196F3;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
  .directory section{
    grid-column: 1/-1;
    text-align: center;
  }
  
  
.grid-view{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 2rem;
  }
.grid-view .member{
    border: black solid;
    border-radius: 10px;
    text-align: center;
    width: 20rem;
  }

.list-view {
    width: 100%;
    height: auto;
}
.list-view .member {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.list-view > :not(:last-child) {
    border-bottom: #000000 solid;
}
.directory-header {
    display: flex;
    justify-content: space-evenly;
}

#grid-button,
#list-button {
    border: var(--highlight-color) solid;
    border-radius: 5px;
    background-color: var(--secondary-color);
    width: 2rem;
    padding: .5rem;
    margin-bottom: 2rem ;
}





@media screen and (max-width:499px) {

    main {
        grid-template-columns: 1fr;
    }

    .current-events {
        grid-row: 3;
    }

    .spotlight {
        grid-row: 4;
    }

    .weather {
        grid-row: 5;
    }

    .discover {
        display: grid;
        grid-template-columns: 1fr;
    }

    nav a {
        display: block;
        width: 100%;
        margin-bottom: 0;
        background-color: var(--secondary-color);
        color: var(--font-color);
        text-decoration: none;
        transition: 0.4s;
        margin: auto;
        text-align: center;
        border-bottom: black solid;
        padding: 1%;
        height: 45px;
        font-size: 1.2rem;
    }

    .hamburger-button button {
        background-color: var(--primary-color);
        width: 70px;
        height: 70px;
        font-size: 3rem;
    }

    nav {
        display: flex;
        justify-content: center;
        align-content: center;
        background-color: var(--secondary-color);
        flex-wrap: wrap;
    }
    footer{
        display: grid;
        grid-auto-flow: row;
        
        align-items: center;
        justify-items: center;
    }
    footer p{
        text-align: center;
    }
    .list-view .member {
        flex-wrap: wrap;
    }
    
}

